🥐 REBRAND: Hive → Bunery - Bake Your Desktop Apps!
🎉 Complete Rebrand:
- 🐝 Hive → 🥐 Bunery
- build → bake (commands)
- "A bakery for Bun-powered apps"

✨ Why Bunery?
- ✅ Unique name (Hive was taken by Apache Hive, Dart Hive)
- ✅ Perfect wordplay: Bun + Bakery = Bunery
- ✅ "bake" commands are intuitive and thematic
- ✅ Fresh marketing angle: "Bake your desktop apps"
- ✅ No trademark conflicts

🔧 Changes:
- hive.config.ts → bunery.config.ts
- All code references updated
- All documentation updated
- New emojis: 🥐🍞 instead of 🐝
- Commands: bake, bake:all, bake:frontend

📦 New Build Commands:
```bash
bun run dev           # Development
bun run bake          # Build current platform
bun run bake:all      # Build all platforms
bun run bake:frontend # Build frontend assets
```

Legacy aliases still work:
- build → bake
- build:all → bake:all

🎯 Output Files:
- bunery-darwin-x64.app
- bunery-darwin-arm64.app
- bunery-linux-x64
- bunery-linux-arm64
- bunery-windows-x64.exe

💡 Tagline:
"🥐 Bake your desktop apps with Bun + Webview"
"Fresh builds, straight from the oven"

✅ All platforms tested and working!
✅ All builds successful!
✅ Ready for CLI development!

--- a/.github-readme-optimization.md
+++ b/.github-readme-optimization.md
@@ -14,13 +14,13 @@ bun build --compile --minify --sourcemap ./src/index.ts --outfile myapp
 - **Reduces code size** by ~200 KB (as shown in build output)
 - Removes whitespace, shortens variable names
 - Makes debugging harder (use source maps)
-- **Enabled by default** in Hive
+- **Enabled by default** in Bunery
 
 ### `--sourcemap=external`
 - Generates `.map` files for debugging
 - Allows you to debug minified code
 - Maps minified code back to original source
-- **Enabled by default** in Hive
+- **Enabled by default** in Bunery
 
 ### `--bytecode` (Experimental)
 - **2x faster startup time** (from ~100ms to ~50ms)
@@ -38,7 +38,7 @@ bun build --compile --minify --sourcemap ./src/index.ts --outfile myapp
 
 ## Configuration
 
-Edit `hive.config.ts`:
+Edit `bunery.config.ts`:
 
 ```typescript
 build: {
@@ -53,15 +53,15 @@ build: {
 All platforms are built with the same optimizations:
 
 ```bash
-bun run build:all
+bun run bake:all
 ```
 
 Output (all minified):
-- `dist/hive-darwin-arm64` - 58 MB
-- `dist/hive-darwin-x64` - 64 MB
-- `dist/hive-linux-x64` - 100 MB
-- `dist/hive-linux-arm64` - 93 MB
-- `dist/hive-windows-x64.exe` - 114 MB
+- `dist/bunery-darwin-arm64` - 58 MB
+- `dist/bunery-darwin-x64` - 64 MB
+- `dist/bunery-linux-x64` - 100 MB
+- `dist/bunery-linux-arm64` - 93 MB
+- `dist/bunery-windows-x64.exe` - 114 MB
 
 ## References
 
